[gd_scene load_steps=5 format=2]

[ext_resource path="res://Card.gd" type="Script" id=1]
[ext_resource path="res://assets/cards/0.jpg" type="Texture" id=2]
[ext_resource path="res://scripts/draggy.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 46.2402, 64.5 )

[node name="Card" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="Sprite"]
scale = Vector2( 4, 4 )
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/Area2D"]
shape = SubResource( 1 )

[connection signal="dragsignal" from="Sprite/Area2D" to="." method="_on_Area2D_dragsignal"]
[connection signal="input_event" from="Sprite/Area2D" to="." method="_on_Area2D_input_event"]
[connection signal="mouse_entered" from="Sprite/Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Sprite/Area2D" to="." method="_on_Area2D_mouse_exited"]
